fixed setup script call from dotbot file. changed zsh setup to check if shell is zsh before changing

--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -14,4 +14,8 @@
 
 - shell:
   - [git submodule update --init --recursive, Installing submodules]
-  - [sh setup/setup.sh, Installing submodules]
+  - 
+    command: cd setup && sh setup.sh
+    stdin: true
+    stdout: true
+    description: Running setup script
