local bin path added, paste remap in visual mode vim and some qt support

--- a/nvim/coc-settings.json
+++ b/nvim/coc-settings.json
@@ -15,8 +15,16 @@
     "initializationOptions": {
         "cache": {
           "directory": "/tmp/ccls"
-        }
-      }
+        },
+        "clang": {
+            "extraArgs": [
+                    "-I",
+                    "/usr/include/qt/QtCore",
+                    "/usr/include/qt/QtGui",
+                    "/usr/include/qt/QtWidgets"
+            ]
+        }        
+    }
   }
 }
 }
