--- a/.config/mpd/mpd.conf
+++ b/.config/mpd/mpd.conf
@@ -1,23 +1,44 @@
 # Recommended location for database
 db_file            "~/.config/mpd/database"
 
+# This specifies the directory where music is located
+music_directory     "~/Music/youtube_dl"
+
+# Refresh databse whenever the files in the music directory are changed
+auto_update "yes"
+
 # Logs to systemd journal
 log_file           "syslog"
-
-# The music directory is by default the XDG directory, uncomment to amend and choose a different directory
-#music_directory    "~/music"
 
 audio_output {
         type            "pulse"
         name            "pulse audio"
 }
 
+# This setting defines a list of tag types that will be extracted during the
+# audio file discovery process. The complete list of possible values can be
+# found in the user manual.
+#metadata_to_use	"artist,album,title,track,name,genre,date,composer,performer,disc"
+#
+# This example just enables the "comment" tag without disabling all
+# the other supported tags:
+#metadata_to_use "+comment"
+
 # Uncomment to refresh the database whenever files in the music_directory are changed
 auto_update "yes"
+
 bind_to_address "127.0.0.1"
 
 # Uncomment to enable the functionalities
 playlist_directory "~/.config/mpd/playlists"
 pid_file           "~/.config/mpd/pid"
+# The state file is a file where MPD saves and restores its state (play queue, playback position etc.) to keep it persistent across restarts and reboots.
+# MPD will attempt to load the state file during startup, and will save it when shutting down the daemon. Additionally, the state file is refreshed every two minutes (after each state change).
 #state_file         "~/.config/mpd/state"
+
+# “Stickers” are pieces of information attached to songs. Some clients use them to store ratings and other volatile data. This feature requires SQLite, compile-time configure option -Dsqlite=....#
 #sticker_file       "~/.config/mpd/sticker.sql"
+
+# If this setting is set to "yes", MPD will discover audio files by following
+# symbolic links outside of the configured music_directory.
+follow_outside_symlinks	"yes"
