--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule ".config/suckless"]
 	path = .config/suckless
 	url = git@github.com:kelvin-van-vuuren/suckless.git
+[submodule ".config/nvim"]
+	path = .config/nvim
+	url = git@github.com:kelvin-van-vuuren/NvChad.git
