--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,15 @@
 [submodule ".config/nvim"]
 	path = .config/nvim
 	url = git@github.com:kelvin-van-vuuren/NvChad.git
+[submodule ".config/dwm"]
+	path = .config/dwm
+	url = git@github.com:kelvin-van-vuuren/dwm.git
+[submodule ".config/st"]
+	path = .config/st
+	url = git@github.com:kelvin-van-vuuren/st.git
+[submodule ".config/dmenu"]
+	path = .config/dmenu
+	url = git@github.com:kelvin-van-vuuren/dmenu.git
+[submodule ".config/slock"]
+	path = .config/slock
+	url = git@github.com:kelvin-van-vuuren/slock.git
